[workspace]
resolver = "2"
members = ["multi-token", "concert"]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", tag = "v1.4.0" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", tag = "v1.4.0" }
primitive-types = { version = "0.12", default-features = false }
gmeta = { git = "https://github.com/gear-tech/gear", tag = "v1.4.0" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
gtest = { git = "https://github.com/gear-tech/gear", tag = "v1.1.0" }
gclient = "1.1.0"
tokio = "1"
concert = { path = "concert" }
concert-io = { path = "concert/io" }
multi-token = { path = "multi-token" }
multi-token-io = { path = "multi-token/io" }
